fixed spacing

--- a/client/components/About.css
+++ b/client/components/About.css
@@ -3,21 +3,23 @@
   align-items: center;
   justify-content: center;
   width: 100%; /* Use a percentage for width (it will not reach the edges) */
-  max-width: 1400px; /* Limits the max-width to prevent stretching too much */
+  max-width: 1450px; /* Limits the max-width to prevent stretching too much */
   margin: 0 auto; /* Centers the container horizontally */
-  padding: 40px 20px; /* Internal padding for space inside */
   background: white;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   min-height: 60vh; /* Ensures the container covers 80% of the viewport height */
+  margin-top: 80px;
 }
 
 .text-section {
   flex: 1;
   padding: 20px;
+  margin-right: 110px;
 }
 
 .image-section {
   flex: 1;
+  margin-right: 20px;
 }
 
 .image-container {
@@ -33,7 +35,8 @@
   width: 100%;
   height: 100%;
   object-fit: cover; /* Ensures it fills the container */
-  border-radius: 0; /* Removes the rounded corners */
+  border-radius: 10px; /* Removes the rounded corners */
+  /* margin-left: 20px; */
 }
 
 @media (max-width: 768px) {
