--- a/client/components/contact/Contact.css
+++ b/client/components/contact/Contact.css
@@ -1,4 +1,5 @@
 .contact {
+  font-family: 'Lato', sans-serif;
   position: relative;
   display: flex;
   justify-content: center;
@@ -21,6 +22,7 @@
   text-align: left;
   color: white;
   padding-right: 50px;
+  font-family: 'Lato', sans-serif; /* Applied Lato */
 }
 
 .contact-text h1 {
@@ -81,6 +83,7 @@ form {
   box-shadow: 0 0 10px black;
   color: green;
   backdrop-filter: blur(5px);
+  font-family: 'Lato', sans-serif; /* Applied Lato */
 }
 
 form h2 {
@@ -128,38 +131,41 @@ form button:hover {
   background: pink;
 }
 
-  .contact-text {
-    padding-right: 0;
-    margin-bottom: 20px;
-  }
+.contact-text {
+  padding-right: 0;
+  margin-bottom: 20px;
+}
 
-  form {
-    width: 100%;
-  }
+form {
+  width: 100%;
+}
 
-  .contact-text span {
-    display: block;
-    margin-bottom: 20px; 
-  }
-  
-  .contact-text p {
-    margin-top: 10px; 
-  }
-  
-  .arrow-button {
-    background-color: blue;
-    color: rgb(254, 250, 250);
-    border: none;
-    padding: 6px 40px;
-    font-size: 16px;
-    cursor: pointer;
-    font-weight: bold;
-    text-align: right; /* Aligns text to the left */
+.contact-text span {
+  display: block;
+  margin-bottom: 20px;
+}
 
-    /* Create an arrow shape */
-    clip-path: polygon(0% 0%, 80% 0%, 100% 50%, 80% 100%, 0% 100%);
-  }
+.contact-text p {
+  margin-top: 10px;
+}
 
-  .arrow-button:hover {
-    background-color: rgb(157, 157, 197);
-  }
+.button-container {
+  display: flex;
+  flex-direction: column; /* Stack buttons vertically */
+  gap: 10px; /* Adds space between the buttons */
+  margin-top: 20px;
+}
+
+.blue-link {
+  color: blue;               /* Blue text color */
+  text-decoration: underline; /* Always show underline */
+  font-size: 13px;            /* Adjust font size as needed */
+  font-weight: bold;          /* Optional: makes the text bold */
+  display: block;             /* Make it a block element to respect margin */
+
+  margin-top: 15px;
+}
+
+.link:hover {
+  color: blue; /* Change text color */
+}
